--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ main {
     width: 75%;
     height: 25%;
     position: absolute;
+    min-height: 200px;
 }
 
 /**
@@ -171,6 +172,21 @@ main {
 }
 
 /**
+======= COMPLETE CONTAINER ========
+*/
+.complete-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    display: none;
+
+    p {
+        color: #817d7d;
+    }
+}
+
+/**
 ====== RESPONSIVE =====
 */
 
@@ -194,7 +210,7 @@ main {
     }
 
     .front-card-container {
-        top: 55%;
+        top: 70%;
         left: 50%;
         transform: translateX(-60%) !important;
         height: 60%;
